2012-12-07  Eli Zaretskii  <eliz@gnu.org>

	* job.c (construct_command_argv_internal): Remove " from
	sh_chars_dos[].  Ignore an escaped backslash inside a string
	quoted with "..".  This lifts the 4KB or 8KB command-line length
	limitation imposed by the Windows shell when a command uses quoted
	strings, because we now don't call the shell in that case.

	* job.c (create_batch_file): Declare the counter of batch files
	static, to avoid having 2 jobs using the same file name and
	stepping on each other's toes.  When all 64K names are used up,
	make one more loop looking for slots that became vacant.  This
	avoids leaving behind temporary batch files in the temporary
	directory, which happens frequently on a fast machine when using
	parallel builds.
	(reap_children): Add debug message for when removal of a temporary
	batch file fails.

2012-10-29  Paul Smith  <psmith@gnu.org>

	New feature: "load" directive for dynamically-loaded objects.

	* NEWS: Document new "load" directive.
	* doc/make.texi (Extending make): New chapter on extensions to make.
	* configure.in: Check for dlopen/dlsym/dlerror and -ldl.
	* Makefile.am (make_SOURCES): Add new file load.c.
	* make.h: Prototype for load_file().
	* main.c (main): Add "load" to .FEATURES if it's available.
	* read.c (eval): Parse "load" and "-load" directives.

2012-09-29  Paul Smith  <psmith@gnu.org>

	* configure.in: Require a new version of gettext (1.18.1).
	Fixes Savannah bug #37307.

2012-09-09  Paul Smith  <psmith@gnu.org>

	* configure.in (bsd_signal): Define _GNU_SOURCE, a la make.h.
	Fixes Savannah bug #32247.

	* remake.c (update_file_1): Force intermediate files to be
	considered, not pruned, if their non-intermediate parent needs to
	be remade.  Fixes Savannah bug #30653.

	* job.c (construct_command_argv_internal): Keep the command line
	on the heap for very long lines.  Fixes Savannah bug #36451.

	* function.c (func_realpath): BSD realpath(3) doesn't fail if the